# BlkBuilder

./: .gitignore  CMakeLists.txt  ice_com_icon_dragon.spa  main.cpp  main.h  test0.spa  test00.spa  test000.spa
BlkBuilder/: BlkBuilder.sln
BlkBuilder/BlkBuilder/: App.axaml  App.axaml.cs  Program.cs  ViewLocator.cs  app.manifest
BlkBuilder/BlkBuilder/ViewModels/: MainWindowViewModel.cs  ViewModelBase.cs
BlkBuilder/BlkBuilder/Views/: MainWindow.axaml  MainWindow.axaml.cs
lib/: blkutils.cpp  blkutils.h
